# interiorai

./: .editorconfig  .env.example  .gitattributes  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  Makefile  README.md  REQUIREMENTS.md  SECURITY.md  TECH_STACK.md  cloudflare.txt  docker-compose.yml  eslint.config.js  features2402.md  package.json  pnpm-lock.yaml  pyproject.toml  ruff.toml  tsconfig.json  turbo.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
apps/desktop/: README.md
apps/mobile/: README.md
apps/web/: next.config.ts  package.json  tsconfig.json
apps/web/src/: middleware.ts  r3f-global.d.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: approval-banner.tsx  bom-category-summary.tsx  bom-table.tsx  change-order-dialog.tsx  comment-thread.tsx  contractor-card.tsx  contractor-filters.tsx  cutlist-table.tsx  design-generation-dialog.tsx  design-result-viewer.tsx  drawing-preview.tsx  file-upload.tsx  floor-plan-upload.tsx  gantt-chart.tsx  hire-dialog.tsx  job-progress.tsx  measurement-overlay.tsx  milestone-tracker.tsx  nesting-viewer.tsx  notification-bell.tsx  panel-schedule.tsx  payment-form.tsx  payment-milestone.tsx  pipe-sizing-table.tsx  review-form.tsx  room-segmentation-viewer.tsx  sidebar.tsx  site-log-form.tsx  topnav.tsx
apps/web/src/hooks/: use-realtime-notifications.ts
apps/web/src/lib/: auth.config.ts  auth.ts  collaboration.ts  crypto.ts  currency.ts  gltf-loader.ts  llm-client.ts  room-builder.ts  snap-engine.ts  storage.ts  units.ts
data/building-codes/: eu-eurocode.json  india-nbc.json  uk-building-regs.json  us-irc.json
data/building-codes/schema/: code-entry.schema.json
docs/: CNAME  architecture.md  development.md  index.html
infra/docker/: design-engine.Dockerfile  web.Dockerfile
infra/k8s/: README.md  configmap.yaml  design-engine.yaml  ingress.yaml  meilisearch.yaml  minio.yaml  namespace.yaml  postgres.yaml  redis.yaml  secrets.yaml  services.yaml  web.yaml
infra/terraform/: README.md  compute.tf  database.tf  main.tf  networking.tf  outputs.tf  storage.tf  variables.tf
ml/design-gen/: README.md  pyproject.toml
ml/design-gen/src/openlintel_design_gen/: __init__.py  graph.py  nodes.py  prompts.py  style_db.py
ml/floor-plan-digitizer/: README.md  pyproject.toml
ml/floor-plan-digitizer/src/openlintel_digitizer/: __init__.py  dxf_generator.py  image_preprocessor.py  pipeline.py  schemas.py  vlm_extractor.py
ml/measurement/: README.md  pyproject.toml
ml/measurement/src/openlintel_measurement/: __init__.py  calibration.py  depth_to_metric.py  estimator.py  multi_view.py  schemas.py
ml/product-matching/: README.md  pyproject.toml
ml/product-matching/src/openlintel_product_matching/: __init__.py  embedder.py  indexer.py  pipeline.py  reranker.py  schemas.py  searcher.py
ml/room-segmentation/: README.md  pyproject.toml  requirements.txt
ml/room-segmentation/src/openlintel_segmentation/: __init__.py  pipeline.py  sam2_wrapper.py  schemas.py  vlm_detector.py
services/bom-engine/: Dockerfile  README.md  main.py  pyproject.toml
services/bom-engine/src/agents/: bom_agent.py  material_db.py  substitution.py
services/bom-engine/src/models/: bom.py
services/bom-engine/src/routers/: bom.py
services/bom-engine/src/services/: calculator.py  export.py  optimizer.py
services/catalogue-service/: Dockerfile  README.md  main.py  pyproject.toml
services/catalogue-service/src/models/: category.py  product.py
services/catalogue-service/src/routers/: categories.py  products.py  vendors.py
services/catalogue-service/src/services/: price_comparison.py  search.py  vector_search.py
services/collaboration/: Dockerfile  README.md  package.json
services/collaboration/src/: auth.ts  index.ts
services/collaboration/src/routes/: approvals.ts  comments.ts  notifications.ts
services/collaboration/src/services/: approval-flow.ts  notification.ts  yjs-provider.ts
services/collaboration/src/ws/: awareness.ts  connection.ts  rooms.ts
services/cutlist-engine/: Dockerfile  README.md  main.py  pyproject.toml
services/cutlist-engine/src/agents/: cutlist_agent.py  hardware_agent.py
services/cutlist-engine/src/models/: hardware.py  nesting.py  panels.py
services/cutlist-engine/src/routers/: cutlist.py  cutlist_job.py
services/cutlist-engine/src/services/: dxf_output.py  edge_banding.py  nesting.py  offcut_tracker.py
services/design-engine/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
services/design-engine/src/: __init__.py
services/design-engine/src/agents/: __init__.py  design_agent.py  evaluator.py  prompt_builder.py
services/design-engine/src/models/: __init__.py  requests.py  responses.py
services/design-engine/src/routers/: __init__.py  designs.py
services/design-engine/src/services/: __init__.py  generation.py
services/design-engine/src/tools/: __init__.py  room_analyzer.py  vlm_generate.py
services/drawing-generator/: Dockerfile  README.md  main.py  pyproject.toml
services/drawing-generator/src/agents/: annotation.py  coordinate_calc.py  drawing_agent.py
services/drawing-generator/src/models/: drawings.py
services/media-service/: Dockerfile  README.md  main.py  pyproject.toml
services/media-service/src/: __init__.py
services/media-service/src/models/: __init__.py  media.py
services/media-service/src/routers/: __init__.py  assets.py  upload.py
services/media-service/src/services/: __init__.py  metadata.py  optimizer.py  validator.py
services/mep-calculator/: Dockerfile  README.md  main.py  pyproject.toml
services/mep-calculator/src/models/: hvac.py  (+2 more)
services/mep-calculator/tests/: test_electrical.py  test_hvac.py  test_plumbing.py
services/procurement-service/: Dockerfile  README.md  main.py  pyproject.toml
services/project-service/: Dockerfile  README.md  main.py  pyproject.toml
services/vision-engine/: Dockerfile  main.py  pyproject.toml
(+159 files in other folders)
